--- a/ttpush_ui/css.less
+++ b/ttpush_ui/css.less
@@ -367,10 +367,13 @@ body    { margin: 0; }
             span{ font-size: 14px; color: #333F48;}}
         .Note{ padding: 0 13px;
             span{ color: #333; font-weight: bold;}
+            a{ color: #EF6079; text-decoration: underline !important;
+                &:hover{ text-decoration: none;}}
             ul{ list-style-type: decimal; padding-inline-start:20px;
-                    li{ color: #828282; font-size: 14px; line-height:20px;
-                    a{ color: #EF6079; text-decoration: underline !important;
-                        &:hover{ text-decoration: none;}}}}}
+                li{ color: #828282; font-size: 14px; line-height:20px;}}
+            .center{ width: 100%; text-align: center; padding: 10px 0;}}
+        .flexH{ width: 100%; text-align: center; position: absolute; bottom: 0px; left: 0;
+            a.button{ display: inline-block; line-height: 50px;}}
         .card { width: calc(100% - 10px); height: 230px; margin-top: 15px; max-width: 384px; border-radius: 20px; overflow: hidden; position: relative; background-color: white; box-shadow: 0px 5px 10px rgba(55, 84, 170, 0.2); background: url(img/card-ipass.png); background-size: contain; background-repeat: no-repeat; background-color: #fff; background-position:  center center;
             .bg-dark { width: 100%; height: 100%; display: block; background-color: #00000076; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;
                 p{ font-size: 22px; color: #fff; transform-origin: 50% 0%; transform: rotateZ(-15deg);}}}} 
